--- a/views/index.jade
+++ b/views/index.jade
@@ -6,11 +6,11 @@ html
         function updateFont() {
             $("textarea#sample").css("font-family", $("select#fontselector").val());
         }
-    style
-        - each fontinfo in fonts
+    - each fontinfo in fonts
+        style
             @font-face {
-                font-family: fontinfo[0];
-                src: url('fontinfo[1]');
+                font-family: #{fontinfo[0]};
+                src: url('#{fontinfo[1]}');
             }
     body
         table: tr
@@ -32,5 +32,7 @@ html
                width: 600px; height: 300px; padding: 15px; border-style: none;
                font-size: 2em; text-align: center; direction: rtl; 
                }
+        script
+            $(document).ready(updateFont);
 
 
