--- a/views/index.jade
+++ b/views/index.jade
@@ -4,8 +4,13 @@ html
         title مستودع خطوط الويب العربية
         script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js")
         script
-            function updateFont() {
-                $("textarea#sample").css("font-family", $("select#fontselector").val());
+            function set_font(name) {
+                $("textarea#sample").css("font-family", name);
+            }
+            function select_font(name, btn) {
+                set_font(name);
+                $(".selected_button").removeClass("selected_button");
+                $(btn).addClass("selected_button");
             }
         - each name in fontnames
             style
@@ -16,11 +21,11 @@ html
     body
         table: tr
             td
-                div#selector Font Selector
-                select#fontselector(onchange="updateFont()")
-                  - fontnames.forEach( function(name) {
-                      option= name
-                  - })
+                div#selector
+                    | Font Selector
+                    - each name in fontnames
+                        div(class: "button", onclick="select_font('" + name + "', this)")
+                            =name
 
             td
                 textarea#sample 
@@ -28,7 +33,9 @@ html
                   تستطيع تحرير هذا النص
         style
            td { vertical-align: top; }
-           div#selector { width: 300px; }
+           div#selector { direction: ltr; text-align: left; width: 300px; }
+           div#selector .button { margin: 4px; padding: 10px; width: 200px; border: 1px solid silver; }
+           div#selector .selected_button { background-color: #eeffee; }
            textarea#sample { 
                width: 600px; height: 300px; padding: 15px; border-style: none;
                font-size: 2em; text-align: center; direction: rtl; 
