--- a/views/index.jade
+++ b/views/index.jade
@@ -34,7 +34,12 @@ html
         style
            td { vertical-align: top; }
            div#selector { direction: ltr; text-align: left; width: 300px; }
-           div#selector .button { margin: 4px; padding: 10px; width: 200px; border: 1px solid silver; }
+           div#selector .button { 
+               margin: 4px; padding: 10px; 
+               width: 200px; 
+               border: 1px solid silver; border-radius: 10px;
+               cursor: pointer;  
+           }
            div#selector .selected_button { background-color: #eeffee; }
            textarea#sample { 
                width: 600px; height: 300px; padding: 15px; border-style: none;
