--- a/views/index.jade
+++ b/views/index.jade
@@ -22,7 +22,7 @@ html
         table: tr
             td
                 div#selector
-                    | Font Selector
+                    | Select Font:
                     - each name in fontnames
                         div(class: "button", onclick="select_font('" + name + "', this)")
                             =name
@@ -35,12 +35,15 @@ html
            td { vertical-align: top; }
            div#selector { direction: ltr; text-align: left; width: 300px; }
            div#selector .button { 
-               margin: 4px; padding: 10px; 
+               margin: 8px; padding: 10px; 
                width: 200px; 
                border: 1px solid silver; border-radius: 10px;
                cursor: pointer;  
            }
-           div#selector .selected_button { background-color: #eeffee; }
+           div#selector .selected_button { 
+               background-color: hsl(150, 40%, 93%);
+               color: hsl(44, 80%, 10%);
+               }
            textarea#sample { 
                width: 600px; height: 300px; padding: 15px; border-style: none;
                font-size: 2em; text-align: center; direction: rtl; 
