--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,9 @@ html
                 set_font(name);
                 $(".selected_button").removeClass("selected_button");
                 $(btn).addClass("selected_button");
+                var root = location.protocol + '//' + location.host;
+                var url = encodeURI(root + "/css?" + name);
+                $("#code").text(url);
             }
         - each name in fontnames
             style
@@ -31,6 +34,7 @@ html
                 textarea#sample 
                   الخط العربي على الانترنت
                   تستطيع تحرير هذا النص
+        div#code Code here
         style
            td { vertical-align: top; }
            div#selector { direction: ltr; text-align: left; width: 300px; }
@@ -45,9 +49,15 @@ html
                color: hsl(44, 80%, 10%);
                }
            textarea#sample { 
-               width: 600px; height: 300px; padding: 15px; border-style: none;
+               width: 600px; height: 200px; padding: 15px; border-style: none;
                font-size: 2em; text-align: center; direction: rtl; 
                }
+            div#code {
+                margin: 5 10%;
+                padding: 20px;
+                color: hsl(120, 70%, 25%);
+                font: normal 15px monospace;
+            }
         script
             $(document).ready(function(){
                 $($("div#selector .button").get(0)).click();
