--- a/views/index.jade
+++ b/views/index.jade
@@ -53,10 +53,12 @@ html
                font-size: 2em; text-align: center; direction: rtl; 
                }
             div#code {
-                margin: 5px 10%;
-                padding: 10px;
+                margin: 5px 2%;
+                padding: 10px 4%;
                 color: hsl(120, 70%, 25%);
                 font: normal 15px monospace;
+                border: 1px solid silver;
+                background-color: hsl(100, 40%, 95%);
             }
         script
             $(document).ready(function(){
