--- a/views/index.jade
+++ b/views/index.jade
@@ -55,6 +55,7 @@ html
            textarea#sample { 
                width: 600px; height: 200px; padding: 15px; border-style: none;
                font-size: 2em; text-align: center; direction: rtl; 
+               overflow: hidden;
                }
             div#code {
                 margin: 5px 2%;
