force the small preview to not get too high

--- a/views/index.jade
+++ b/views/index.jade
@@ -51,7 +51,7 @@ html
                background-color: hsl(150, 40%, 93%);
                color: hsl(44, 80%, 10%);
                }
-           div.preview { text-align: right; }
+           div.preview { text-align: right; line-height: 15px; }
            textarea#sample { 
                width: 600px; height: 200px; padding: 15px; border-style: none;
                font-size: 2em; text-align: center; direction: rtl; 
