--- a/views/index.jade
+++ b/views/index.jade
@@ -20,11 +20,7 @@ html
                 $("textarea#sample").css("font-family", name);
             }
         - each name in fontnames
-            style
-                @font-face {
-                    font-family: #{name};
-                    src: url('#{fonts[name]}');
-                }
+            link(rel="stylesheet", type="text/css", href="/css?" + name)
     body
         div#code.linkcode
         table: tr
