don't self-close link tag

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,7 +8,7 @@ html
                 return encodeURI(location.protocol + '//' + location.host + "/css?" + name);
             }
             function font_link_code(name) {
-                return '<link rel="stylesheet" type="text/css" href="' + font_url(name) + '" />';
+                return '<link rel="stylesheet" type="text/css" href="' + font_url(name) + '">';
             }
             function select_font(name, btn) {
                 // button management!!
